--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="h1">Universal Declaration of Human Rights</h1>
+    <h1 class="display-1">Universal Declaration of Human Rights</h1>
 
-    <h2 class="h2">Preamble</h2>
+    <h2 class="display-2">Preamble</h2>
 
     <p>
       Whereas recognition of the inherent dignity and of the equal and
@@ -50,13 +50,13 @@
       themselves and among the peoples of territories under their jurisdiction.
     </p>
 
-    <h2 class="h2">Article 1</h2>
+    <h2 class="display-2">Article 1</h2>
     <p>
       All human beings are born free and equal in dignity and rights. They are
       endowed with reason and conscience and should act towards one another in a
       spirit of brotherhood.
     </p>
-    <h2 class="h2">Article 2</h2>
+    <h2 class="display-2">Article 2</h2>
     <p>
       Everyone is entitled to all the rights and freedoms set forth in this
       Declaration, without distinction of any kind, such as race, colour, sex,
@@ -67,45 +67,45 @@
       independent, trust, non-self-governing or under any other limitation of
       sovereignty.
     </p>
-    <h2 class="h2">Article 3</h2>
+    <h2 class="display-2">Article 3</h2>
     <p>Everyone has the right to life, liberty and the security of person.</p>
-    <h2 class="h2">Article 4</h2>
+    <h2 class="display-2">Article 4</h2>
     <p>
       No one shall be held in slavery or servitude; slavery and the slave trade
       shall be prohibited in all their forms.
     </p>
-    <h2 class="h2">Article 5</h2>
+    <h2 class="display-2">Article 5</h2>
     <p>
       No one shall be subjected to torture or to cruel, inhuman or degrading
       treatment or punishment.
     </p>
-    <h2 class="h2">Article 6</h2>
+    <h2 class="display-2">Article 6</h2>
     <p>
       Everyone has the right to recognition everywhere as a person before the
       law.
     </p>
-    <h2 class="h2">Article 7</h2>
+    <h2 class="display-2">Article 7</h2>
     <p>
       All are equal before the law and are entitled without any discrimination
       to equal protection of the law. All are entitled to equal protection
       against any discrimination in violation of this Declaration and against
       any incitement to such discrimination.
     </p>
-    <h2 class="h2">Article 8</h2>
+    <h2 class="display-2">Article 8</h2>
     <p>
       Everyone has the right to an effective remedy by the competent national
       tribunals for acts violating the fundamental rights granted him by the
       constitution or by law.
     </p>
-    <h2 class="h2">Article 9</h2>
+    <h2 class="display-2">Article 9</h2>
     <p>No one shall be subjected to arbitrary arrest, detention or exile.</p>
-    <h2 class="h2">Article 10</h2>
+    <h2 class="display-2">Article 10</h2>
     <p>
       Everyone is entitled in full equality to a fair and public hearing by an
       independent and impartial tribunal, in the determination of his rights and
       obligations and of any criminal charge against him.
     </p>
-    <h2 class="h2">Article 11</h2>
+    <h2 class="display-2">Article 11</h2>
     <ol>
       <li>
         Everyone charged with a penal offence has the right to be presumed
@@ -120,14 +120,14 @@
         the penal offence was committed.
       </li>
     </ol>
-    <h2 class="h2">Article 12</h2>
+    <h2 class="display-2">Article 12</h2>
     <p>
       No one shall be subjected to arbitrary interference with his privacy,
       family, home or correspondence, nor to attacks upon his honour and
       reputation. Everyone has the right to the protection of the law against
       such interference or attacks.
     </p>
-    <h2 class="h2">Article 13</h2>
+    <h2 class="display-2">Article 13</h2>
     <ol>
       <li>
         Everyone has the right to freedom of movement and residence within the
@@ -138,7 +138,7 @@
         return to his country.
       </li>
     </ol>
-    <h2 class="h2">Article 14</h2>
+    <h2 class="display-2">Article 14</h2>
     <ol>
       <li>
         Everyone has the right to seek and to enjoy in other countries asylum
@@ -150,7 +150,7 @@
         and principles of the United Nations.
       </li>
     </ol>
-    <h2 class="h2">Article 15</h2>
+    <h2 class="display-2">Article 15</h2>
     <ol>
       <li>Everyone has the right to a nationality.</li>
       <li>
@@ -158,7 +158,7 @@
         right to change his nationality.
       </li>
     </ol>
-    <h2 class="h2">Article 16</h2>
+    <h2 class="display-2">Article 16</h2>
     <ol>
       <li>
         Men and women of full age, without any limitation due to race,
@@ -175,6 +175,12 @@
         entitled to protection by society and the State.
       </li>
     </ol>
-    <h2 class="h2"><a class="more_links" href="#">Articles 17 to 30</a></h2>
+    <h2 class="display-2">
+      <a
+        class="link"
+        href="https://www.ohchr.org/EN/UDHR/Documents/UDHR_Translations/eng.pdf"
+        >Articles 17 to 30</a
+      >
+    </h2>
   </body>
 </html>
